# TTB-Label-Verifier

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
crates/ttb-api/: Cargo.toml
crates/ttb-api/src/: main.rs
crates/ttb-core/: Cargo.toml
crates/ttb-core/src/: batch.rs  lib.rs  matching.rs  models.rs  ocr.rs  verify.rs  warning.rs
crates/ttb-ui/: index.html  package-lock.json  package.json
crates/ttb-ui/src/: main.ts  styles.css
samples/: README.md  manifest.csv  manifest.json
samples/generated-labels/: README.md  manifest.csv  manifest.json
samples/generated-labels/hard-cases/: README.md  manifest.csv  manifest.json
samples/generated-labels/image-rich/: README.md  manifest.csv  manifest.json
